[gd_scene load_steps=3 format=3 uid="uid://b7mvmittffi60"]

[ext_resource type="Script" path="res://spells/scenes/proj_orbit/proj_orbit.gd" id="1_22t4f"]

[sub_resource type="Curve2D" id="Curve2D_q3j3j"]
_data = {
"points": PackedVector2Array(0, 0, 0, -75, -300, 0, -150, 0, 150, 0, 0, -150, 0, -75, 0, 75, 300, 0, 150, 0, -150, 0, 0, 150, 0, 75, 0, 0, -300, 0)
}
point_count = 5

[node name="ProjOrbit" type="Node2D"]
script = ExtResource("1_22t4f")
proj_amount = 5.0
base_damage = 6
cooldown_time = 6.0

[node name="Path2D" type="Path2D" parent="."]
curve = SubResource("Curve2D_q3j3j")

[node name="KillTimer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[connection signal="timeout" from="KillTimer" to="." method="_on_kill_timer_timeout"]
